--- a/LBProfiler/app/src/main/res/values/strings.xml
+++ b/LBProfiler/app/src/main/res/values/strings.xml
@@ -5,9 +5,17 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="fb_login_protocol_scheme">fb1517816044938000</string>
+    <string name="large_text">
+        "This is an android based software application that enables the user to specify the geographical coordinates in form of latitude and longitude,
+        and apply the requested profile for the specific location automatically.
+        The purpose of this system would be capable of taking decision on profile setting to be changed depending on the zone/location in which the mobile would be operating.
+        This application allows user to input locations by typing in the addresses or by selecting location from Google maps as one would do in Google maps (maps.google.com).
+        Along with the locations, the user can specify a relative order among his locations."
+    </string>
+    <string name="title_activity_about">About Us</string>
     <string name="action_settings">Settings</string>
     <string name="invitation_title">download my app</string>
-    <string name="invitation_message">join my app to get free 10000 likes on every fb pic</string>
+    <string name="invitation_message">Download LBProfiler app 6  </string>
     <string name="invitation_cta">play store link</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_place_selection">Map</string>
