--- a/LBProfiler/app/src/main/res/values/strings.xml
+++ b/LBProfiler/app/src/main/res/values/strings.xml
@@ -14,8 +14,47 @@
     </string>
     <string name="title_activity_about">About Us</string>
     <string name="action_settings">Settings</string>
+
+    <string name="Add">Add</string>
+    <string name="Cancel">Cancel</string>
+
+    <!-- Toast -->
+    <string name="Toast.Validation">Please enter valid data for all fields</string>
+    <!-- Hints -->
+    <string name="Hint.Name">Name for the geofence</string>
+    <string name="Hint.Latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
+    <string name="Hint.Longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
+    <string name="Hint.Radius" formatted="false">Radius (%3.2f to %3.1f km)</string>
+    <!-- Units -->
+    <string name="Units.Degrees">\u00B0</string>
+    <string name="Units.Kilometers">km</string>
+    <!-- Labels -->
+    <string name="Label.EmptyState">You haven\'t created any geofences yet. Tap the plus button to create one.\n\n\nWill we ever get there?! :]</string>
+    <!-- Toast -->
+
+    <string name="Toast.Error">There was an error. Please try again.</string>
+    <string name="task_geofence_notification_title_template">Task geofence: %1$s</string>
+    <!-- Dialogs -->
+    <string name="Yes">Yes</string>
+    <string name="No">No</string>
+    <!-- Notification -->
+    <string name="Notification.Title">Are we there yet?</string>
+    <string name="Notification.Text">We\'re at %1$s!!!</string>
+    <!-- TODO: remove this placeholder text -->
+    <string name="task_geofence_notification_placeholder_text_template">You said %1$s and lorem
+        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
+        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
+        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
+        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
+        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
+        tortor.
+    </string>
+
+    <string name="action_share">Share</string>
+    <string name="action_reply">Reply</string>
+
     <string name="invitation_title">download my app</string>
-    <string name="invitation_message">Download LBProfiler app 6  </string>
+    <string name="invitation_message">Download LBProfiler app.</string>
     <string name="invitation_cta">play store link</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_place_selection">Map</string>
