--- a/LBProfiler/app/src/main/res/values/strings.xml
+++ b/LBProfiler/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="Toast.Error">There was an error. Please try again.</string>
     <string name="task_geofence_notification_title_template">Task geofence: %1$s</string>
     <!-- Dialogs -->
+    <string name="AreYouSure">Are you sure?</string>
     <string name="Yes">Yes</string>
     <string name="No">No</string>
     <!-- Notification -->
