modify profile settings

--- a/LBProfiler/app/src/main/res/values/strings.xml
+++ b/LBProfiler/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="address_found">Address Found</string>
     <string name="no_geocoder_available">No Geo Coder Available</string>
     <string name="title_activity_profile__creation">Profile_Creation</string>
+    <string name="title_activity_view_profile">ViewProfileActivity</string>
 </resources>
